tools/syntax-schema/syntax/solidity/original/derived.ebnf
«IGNORE» = { «Whitespace» | «Comment» | «LineComment» } ;

«Whitespace» = '\u{20}' | '\u{9}' | '\u{d}' | '\u{a}' ;

«Comment» = '/*' { ¬'*' | 1…*{ '*' } ¬( '*' | '/' ) } 1…*{ '*' } '/' ;

«LineComment» = '//' { ¬( '\u{a}' | '\u{d}' ) } ;

sourceUnit = «IGNORE» { directive | definition } $ ;

directive = «pragmaDirective» | importDirective | usingDirective ;

definition = contractDefinition | interfaceDefinition | libraryDefinition | functionDefinition | constantDefinition | structDefinition | enumDefinition | userDefinedValueTypeDefinition | errorDefinition ;

importDirective = 'import' ( simpleImportDirective | starImportDirective | selectingImportDirective ) ';' ;

simpleImportDirective = importPath { 'as' identifier } ;

starImportDirective = '*' 'as' identifier 'from' importPath ;

selectingImportDirective = '{' 1…*{ selectedImport / ',' } '}' 'from' importPath ;

selectedImport = identifier [ 'as' identifier ] ;

importPath = asciiStringLiteral ;

usingDirective = 'using' ( identifierPath | '{' 1…*{ identifierPath / ',' } '}' ) 'for' ( '*' | typeName ) [ 'global' ] ';' ;

contractDefinition = [ 'abstract' ] 'contract' identifier [ inheritanceSpecifierList ] '{' { contractBodyElement } '}' ;

interfaceDefinition = 'interface' identifier [ inheritanceSpecifierList ] '{' { contractBodyElement } '}' ;

inheritanceSpecifierList = 'is' 1…*{ inheritanceSpecifier / ',' } ;

inheritanceSpecifier = identifierPath [ argumentList ] ;

libraryDefinition = 'library' identifier '{' { contractBodyElement } '}' ;

functionDefinition = 'function' ( identifier | 'fallback' | 'receive' ) parameterList { functionAttribute } [ 'returns' nonEmptyParameterList ] ( ';' | block ) ;

functionAttribute = visibilitySpecifier | stateMutabilitySpecifier | modifierInvocation | 'virtual' | overrideSpecifier ;

constantDefinition = typeName 'constant' identifier '=' expression ';' ;

structDefinition = 'struct' identifier '{' 1…*{ typeName identifier ';' } '}' ;

enumDefinition = 'enum' identifier '{' 1…*{ identifier / ',' } '}' ;

userDefinedValueTypeDefinition = 'type' identifier 'is' elementaryTypeWithPayable ';' ;

eventDefinition = 'event' identifier '(' { eventParameter / ',' } ')' [ 'anonymous' ] ';' ;

eventParameter = typeName [ 'indexed' ] [ identifier ] ;

errorDefinition = 'error' identifier '(' { errorParameter / ',' } ')' ';' ;

errorParameter = typeName [ identifier ] ;

contractBodyElement = usingDirective | constructorDefinition | functionDefinition | fallbackFunctionDefinition | receiveFunctionDefinition | modifierDefinition | structDefinition | enumDefinition | userDefinedValueTypeDefinition | eventDefinition | errorDefinition | stateVariableDeclaration ;

constructorDefinition = 'constructor' parameterList { constructorAttribute } block ;

constructorAttribute = modifierInvocation | 'payable' | 'internal' | 'public' ;

fallbackFunctionDefinition = 'fallback' parameterList { fallbackFunctionAttribute } [ 'returns' nonEmptyParameterList ] ( ';' | block ) ;

fallbackFunctionAttribute = 'external' | stateMutabilitySpecifier | modifierInvocation | 'virtual' | overrideSpecifier ;

receiveFunctionDefinition = 'receive' '(' ')' { receiveFunctionAttribute } ( ';' | block ) ;

receiveFunctionAttribute = 'external' | 'payable' | modifierInvocation | 'virtual' | overrideSpecifier ;

modifierDefinition = 'modifier' identifier [ parameterList ] { methodAttribute } ( ';' | block ) ;

methodAttribute = 'virtual' | overrideSpecifier ;

stateVariableDeclaration = typeName { stateVariableAttribute } identifier [ '=' expression ] ';' ;

stateVariableAttribute = 'public' | 'private' | 'internal' | 'constant' | overrideSpecifier | 'immutable' ;

argumentList = '(' [ positionalArgumentList | namedArgumentList ] ')' ;

positionalArgumentList = 1…*{ expression / ',' } ;

namedArgumentList = '{' { namedArgument / ',' } '}' ;

namedArgument = identifier ':' expression ;

modifierInvocation = identifierPath [ argumentList ] ;

parameterList = '(' { parameterDeclaration / ',' } ')' ;

nonEmptyParameterList = '(' 1…*{ parameterDeclaration / ',' } ')' ;

parameterDeclaration = typeName [ dataLocation ] [ identifier ] ;

visibilitySpecifier = 'internal' | 'external' | 'private' | 'public' ;

stateMutabilitySpecifier = 'pure' | 'view' | 'payable' ;

overrideSpecifier = 'override' [ '(' 1…1*{ identifierPath / ',' } ')' ] ;

identifierPath = 1…*{ identifier / '.' } ;

typeName = ( elementaryTypeWithPayable | functionType | mappingType | identifierPath ) { '[' [ expression ] ']' } ;

elementaryTypeWithPayable = 'address' [ 'payable' ] | elementaryType ;

elementaryTypeWithoutPayable = 'address' | elementaryType ;

elementaryType = 'bool' | 'string' | 'bytes' | «SignedIntegerType» | «UnsignedIntegerType» | «FixedBytes» | «Fixed» | «Ufixed» ;

functionType = 'function' parameterList { visibilitySpecifier | stateMutabilitySpecifier } [ 'returns' nonEmptyParameterList ] ;

mappingType = 'mapping' '(' ( elementaryTypeWithoutPayable | identifierPath ) '=>' typeName ')' ;

dataLocation = 'memory' | 'storage' | 'calldata' ;

expression = assignmentExpression ;

assignmentExpression = conditionalExpression assignmentOperator expression ;

assignmentOperator = '=' | '|=' | '^=' | '&=' | '<<=' | '>>=' | '>>>=' | '+=' | '-=' | '*=' | '/=' | '%=' ;

conditionalExpression = orExpression '?' expression ':' expression ;

orExpression = andExpression { '||' andExpression } ;

andExpression = equalityComparisonExpression { '&&' equalityComparisonExpression } ;

equalityComparisonExpression = orderComparisonExpression { equalityComparisonOperator orderComparisonExpression } ;

equalityComparisonOperator = '==' | '!=' ;

orderComparisonExpression = bitOrExpression { orderComparisonOperator bitOrExpression } ;

orderComparisonOperator = '<' | '>' | '<=' | '>=' ;

bitOrExpression = bitXorExpression { '|' bitXorExpression } ;

bitXorExpression = bitAndExpression { '^' bitAndExpression } ;

bitAndExpression = shiftExpression { '&' shiftExpression } ;

shiftExpression = addSubExpression { shiftOperator addSubExpression } ;

shiftOperator = '<<' | '>>' | '>>>' ;

addSubExpression = mulDivModExpression { addSubOperator mulDivModExpression } ;

addSubOperator = '+' | '-' ;

mulDivModExpression = expExpression { mulDivModOperator expExpression } ;

mulDivModOperator = '*' | '/' | '%' ;

expExpression = unarySuffixExpression '**' expression ;

unarySuffixExpression = unaryPrefixExpression unarySuffixOperator ;

unarySuffixOperator = '++' | '--' ;

unaryPrefixExpression = unaryPrefixOperator functionCallExpression ;

unaryPrefixOperator = '++' | '--' | '!' | '~' | 'delete' | '-' ;

functionCallExpression = functionCallOptionsExpression { argumentList } ;

functionCallOptionsExpression = memberAccessExpression { '{' 1…*{ namedArgument / ',' } '}' } ;

memberAccessExpression = indexAccessExpression { '.' ( identifier | 'address' ) } ;

indexAccessExpression = primaryExpression { '[' [ expression ] [ ':' [ expression ] ] ']' } ;

primaryExpression = 'payable' argumentList | 'type' '(' typeName ')' | 'new' typeName | '(' 1…*{ [ expression ] / ',' } ')' | '[' 1…*{ expression / ',' } ']' | identifier | literal | elementaryTypeWithoutPayable ;

literal = asciiStringLiteral | unicodeStringLiteral | numericLiteral | «HexStringLiteral» | «BooleanLiteral» ;

asciiStringLiteral = 1…*{ «AsciiStringLiteral» } ;

unicodeStringLiteral = 1…*{ «UnicodeStringLiteral» } ;

numericLiteral = ( «DecimalNumber» | «HexNumber» ) [ «NumberUnit» ] ;

block = '{' { statement | uncheckedBlock } '}' ;

uncheckedBlock = 'unchecked' block ;

statement = block | simpleStatement | ifStatement | forStatement | whileStatement | doWhileStatement | continueStatement | breakStatement | tryStatement | returnStatement | emitStatement | revertStatement | assemblyStatement ;

simpleStatement = variableDeclarationStatement | expressionStatement ;

ifStatement = 'if' '(' expression ')' statement [ 'else' statement ] ;

forStatement = 'for' '(' ( simpleStatement | ';' ) ( expressionStatement | ';' ) [ expression ] ')' statement ;

whileStatement = 'while' '(' expression ')' statement ;

doWhileStatement = 'do' statement 'while' '(' expression ')' ';' ;

continueStatement = 'continue' ';' ;

breakStatement = 'break' ';' ;

tryStatement = 'try' expression [ 'returns' nonEmptyParameterList ] block catchClause { catchClause } ;

catchClause = 'catch' [ [ identifier ] nonEmptyParameterList ] block ;

returnStatement = 'return' [ expression ] ';' ;

emitStatement = 'emit' expression argumentList ';' ;

revertStatement = 'revert' expression argumentList ';' ;

variableDeclarationList = 1…*{ variableDeclaration / ',' } ;

variableDeclarationTuple = '(' { ',' } variableDeclaration { ',' [ variableDeclaration ] } ')' ;

variableDeclarationStatement = ( variableDeclaration [ '=' expression ] | variableDeclarationTuple '=' expression ) ';' ;

variableDeclaration = typeName [ dataLocation ] identifier ;

expressionStatement = expression ';' ;

assemblyStatement = 'assembly' [ '"evmasm"' ] [ assemblyFlags ] yulBlock ;

assemblyFlags = '(' 1…*{ «DoubleQuotedAsciiStringLiteral» / ',' } ')' ;

identifier = «RawIdentifier» - reservedWord ;

reservedWord = keyword | reservedKeyword | «NumberUnit» | «BooleanLiteral» ;

keyword = 'pragma' | 'abstract' | 'anonymous' | 'address' | 'as' | 'assembly' | 'bool' | 'break' | 'bytes' | 'calldata' | 'catch' | 'constant' | 'constructor' | 'continue' | 'contract' | 'delete' | 'do' | 'else' | 'emit' | 'enum' | 'event' | 'external' | 'fallback' | 'false' | 'for' | 'function' | 'hex' | 'if' | 'immutable' | 'import' | 'indexed' | 'interface' | 'internal' | 'is' | 'library' | 'mapping' | 'memory' | 'modifier' | 'new' | 'override' | 'payable' | 'private' | 'public' | 'pure' | 'receive' | 'return' | 'returns' | 'storage' | 'string' | 'struct' | 'true' | 'try' | 'type' | 'unchecked' | 'using' | 'view' | 'virtual' | 'while' | «SignedIntegerType» | «UnsignedIntegerType» | «FixedBytes» | 'fixed' | 'ufixed' ;

reservedKeyword = 'after' | 'alias' | 'apply' | 'auto' | 'byte' | 'case' | 'copyof' | 'default' | 'define' | 'final' | 'implements' | 'in' | 'inline' | 'let' | 'macro' | 'match' | 'mutable' | 'null' | 'of' | 'partial' | 'promise' | 'reference' | 'relocatable' | 'sealed' | 'sizeof' | 'static' | 'supports' | 'switch' | 'typedef' | 'typeof' | 'var' ;

«pragmaDirective» = 'pragma' ¬';' { ¬';' } ';' ;

«RawIdentifier» = «IdentifierStart» { «IdentifierPart» } ;

«IdentifierStart» = '_' | '$' | 'a'…'z' | 'A'…'Z' ;

«IdentifierPart» = «IdentifierStart» | '0'…'9' ;

«SignedIntegerType» = 'int' ( '8' | '16' | '24' | '32' | '40' | '48' | '56' | '64' | '72' | '80' | '88' | '96' | '104' | '112' | '120' | '128' | '136' | '144' | '152' | '160' | '168' | '176' | '184' | '192' | '200' | '208' | '216' | '224' | '232' | '240' | '248' | '256' ) ;

«UnsignedIntegerType» = 'u' «SignedIntegerType» ;

«FixedBytes» = 'bytes' ( '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9' | '10' | '11' | '12' | '13' | '14' | '15' | '16' | '17' | '18' | '19' | '20' | '21' | '22' | '23' | '24' | '25' | '26' | '27' | '28' | '29' | '30' | '31' | '32' ) ;

«Fixed» = 'fixed' [ '1'…'9' { '0'…'9' } 'x' '1'…'9' { '0'…'9' } ] ;

«Ufixed» = 'u' «Fixed» ;

«BooleanLiteral» = 'true' | 'false' ;

«DecimalNumber» = ( «DecimalInteger» | «DecimalFloat» ) [ «DecimalExponent» ] ;

«DecimalInteger» = 1…*{ '0'…'9' / [ '_' ] } ;

«DecimalFloat» = [ «DecimalInteger» ] '.' «DecimalInteger» ;

«DecimalExponent» = ( 'e' | 'E' ) [ '-' ] «DecimalInteger» ;

«HexNumber» = '0' 'x' 1…*{ «HexCharacter» / [ '_' ] } ;

«NumberUnit» = 'wei' | 'gwei' | 'ether' | 'seconds' | 'minutes' | 'hours' | 'days' | 'weeks' | 'years' ;

«HexStringLiteral» = 'hex' ( '"' [ «PossiblySeparatedPairsOfHexDigits» ] '"' | '\'' [ «PossiblySeparatedPairsOfHexDigits» ] '\'' ) ;

«PossiblySeparatedPairsOfHexDigits» = 1…*{ 2…2*{ «HexCharacter» } / [ '_' ] } ;

«HexCharacter» = '0'…'9' | 'a'…'f' | 'A'…'F' ;

«AsciiStringLiteral» = «SingleQuotedAsciiStringLiteral» | «DoubleQuotedAsciiStringLiteral» ;

«SingleQuotedAsciiStringLiteral» = '\'' { '\u{20}'…'~' - ( '\'' | '\\' ) | «EscapeSequence» } '\'' ;

«DoubleQuotedAsciiStringLiteral» = '"' { '\u{20}'…'~' - ( '"' | '\\' ) | «EscapeSequence» } '"' ;

«UnicodeStringLiteral» = «SingleQuotedUnicodeStringLiteral» | «DoubleQuotedUnicodeStringLiteral» ;

«SingleQuotedUnicodeStringLiteral» = 'unicode\'' { ¬( '\'' | '\\' | '\u{a}' | '\u{d}' ) | «EscapeSequence» } '\'' ;

«DoubleQuotedUnicodeStringLiteral» = 'unicode"' { ¬( '"' | '\\' | '\u{a}' | '\u{d}' ) | «EscapeSequence» } '"' ;

«EscapeSequence» = '\\' ( «AsciiEscape» | «HexByteEscape» | «UnicodeEscape» ) ;

«AsciiEscape» = 'n' | 'r' | 't' | '\'' | '"' | '\\' | '\u{a}' | '\u{d}' ;

«HexByteEscape» = 'x' 2…2*{ «HexCharacter» } ;

«UnicodeEscape» = 'u' 4…4*{ «HexCharacter» } ;

yulBlock = '{' { yulStatement } '}' ;

yulStatement = yulBlock | yulVariableDeclaration | yulFunctionDefinition | yulAssignment | yulFunctionCall | yulIfStatement | yulForStatement | yulSwitchStatement | yulLeaveStatement | yulBreakStatement | yulContinueStatement ;

yulVariableDeclaration = 'let' yulIdentifier [ ':=' yulExpression | [ ',' yulIdentifier ] [ ':=' yulFunctionCall ] ] ;

yulFunctionDefinition = 'function' yulIdentifier '(' { yulIdentifier / ',' } ')' [ '->' 1…*{ yulIdentifier / ',' } ] yulBlock ;

yulAssignment = yulPath ( ':=' yulExpression | 1…*{ ',' yulPath } ':=' yulFunctionCall ) ;

yulFunctionCall = ( yulIdentifier | yulEVMBuiltinFunctionName ) '(' { yulExpression / ',' } ')' ;

yulIfStatement = 'if' yulExpression yulBlock ;

yulLeaveStatement = 'leave' ;

yulBreakStatement = 'break' ;

yulContinueStatement = 'continue' ;

yulForStatement = 'for' yulBlock yulExpression yulBlock yulBlock ;

yulSwitchStatement = 'switch' yulExpression ( 1…*{ 'case' yulLiteral yulBlock } [ 'default' yulBlock ] | 'default' yulBlock ) ;

yulExpression = yulPath | yulFunctionCall | yulLiteral ;

yulPath = yulIdentifier { '.' ( yulIdentifier | yulEVMBuiltinFunctionName ) } ;

yulLiteral = «YulDecimalNumberLiteral» | «YulHexLiteral» | asciiStringLiteral | «BooleanLiteral» | «HexStringLiteral» ;

yulIdentifier = «RawIdentifier» - yulReservedWord ;

yulReservedWord = yulKeyword | yulEVMBuiltinFunctionName | «BooleanLiteral» ;

yulKeyword = 'break' | 'case' | 'continue' | 'default' | 'for' | 'function' | 'if' | 'leave' | 'let' | 'switch' | 'hex' ;

yulEVMBuiltinFunctionName = 'stop' | 'add' | 'sub' | 'mul' | 'div' | 'sdiv' | 'mod' | 'smod' | 'exp' | 'not' | 'lt' | 'gt' | 'slt' | 'sgt' | 'eq' | 'iszero' | 'and' | 'or' | 'xor' | 'byte' | 'shl' | 'shr' | 'sar' | 'addmod' | 'mulmod' | 'signextend' | 'keccak256' | 'pop' | 'mload' | 'mstore' | 'mstore8' | 'sload' | 'sstore' | 'msize' | 'gas' | 'address' | 'balance' | 'selfbalance' | 'caller' | 'callvalue' | 'calldataload' | 'calldatasize' | 'calldatacopy' | 'extcodesize' | 'extcodecopy' | 'returndatasize' | 'returndatacopy' | 'extcodehash' | 'create' | 'create2' | 'call' | 'callcode' | 'delegatecall' | 'staticcall' | 'return' | 'revert' | 'selfdestruct' | 'invalid' | 'log0' | 'log1' | 'log2' | 'log3' | 'log4' | 'chainid' | 'origin' | 'gasprice' | 'blockhash' | 'coinbase' | 'timestamp' | 'number' | 'difficulty' | 'gaslimit' | 'basefee' ;

«YulDecimalNumberLiteral» = '0' | '1'…'9' { '0'…'9' } ;

«YulHexLiteral» = '0x' ( '0'…'9' | 'a'…'f' | 'A'…'F' ) { '0'…'9' | 'a'…'f' | 'A'…'F' } ;
