tools/syntax-schema/src/solidity/parser.rs
use chumsky::{prelude::*, Parser};

// use super::builder;
pub type SourceUnitParserResultType = ();

pub fn create_source_unit_parser(
) -> impl Parser<char, SourceUnitParserResultType, Error = Simple<char>> {
    let mut block_parser = Recursive::declare();
    let mut expression_parser = Recursive::declare();
    let mut statement_parser = Recursive::declare();
    let mut type_name_parser = Recursive::declare();
    let mut yul_block_parser = Recursive::declare();
    let mut yul_expression_parser = Recursive::declare();
    let ascii_escape_parser = choice::<_, Simple<char>>((
        just('n').ignored(),
        just('r').ignored(),
        just('t').ignored(),
        just('\'').ignored(),
        just('"').ignored(),
        just('\\').ignored(),
        just('\n').ignored(),
        just('\r').ignored(),
    ))
    .ignored();
    let boolean_literal_parser = choice::<_, Simple<char>>((just("false"), just("true"))).ignored();
    let comment_parser = just("/*")
        .ignore_then(
            choice::<_, Simple<char>>((
                filter(|&c: &char| c != '*').ignored(),
                just('*')
                    .repeated()
                    .at_least(1usize)
                    .then(none_of("*/"))
                    .ignored(),
            ))
            .repeated(),
        )
        .then(just('*').repeated().at_least(1usize))
        .then_ignore(just('/'))
        .ignored();
    let decimal_integer_parser = filter(|&c: &char| c.is_ascii_digit())
        .separated_by(just('_').or_not())
        .at_least(1usize)
        .ignored();
    let fixed_parser = just("fixed")
        .ignore_then(
            filter(|&c: &char| ('1' <= c && c <= '9'))
                .then(filter(|&c: &char| c.is_ascii_digit()).repeated())
                .then_ignore(just('x'))
                .then(filter(|&c: &char| ('1' <= c && c <= '9')))
                .then(filter(|&c: &char| c.is_ascii_digit()).repeated())
                .or_not(),
        )
        .ignored();
    let fixed_bytes_parser = just("bytes")
        .ignore_then(choice::<_, Simple<char>>((
            choice::<_, Simple<char>>((
                just("10"),
                just("11"),
                just("12"),
                just("13"),
                just("14"),
                just("15"),
                just("16"),
                just("17"),
                just("18"),
                just("19"),
                just("20"),
                just("21"),
                just("22"),
                just("23"),
                just("24"),
                just("25"),
            )),
            choice::<_, Simple<char>>((
                just("26"),
                just("27"),
                just("28"),
                just("29"),
                just("30"),
                just("31"),
                just("32"),
                just("1"),
                just("2"),
                just("3"),
                just("4"),
                just("5"),
                just("6"),
                just("7"),
                just("8"),
                just("9"),
            )),
        )))
        .ignored();
    let hex_character_parser = choice::<_, Simple<char>>((
        filter(|&c: &char| c.is_ascii_digit()).ignored(),
        filter(|&c: &char| ('a' <= c && c <= 'f')).ignored(),
        filter(|&c: &char| ('A' <= c && c <= 'F')).ignored(),
    ))
    .ignored();
    let identifier_start_parser = choice::<_, Simple<char>>((
        just('_').ignored(),
        just('$').ignored(),
        filter(|&c: &char| c.is_ascii_lowercase()).ignored(),
        filter(|&c: &char| c.is_ascii_uppercase()).ignored(),
    ))
    .ignored();
    let line_comment_parser = just("//").ignore_then(none_of("\n\r").repeated()).ignored();
    let number_unit_parser = choice::<_, Simple<char>>((
        just("seconds"),
        just("minutes"),
        just("ether"),
        just("hours"),
        just("weeks"),
        just("years"),
        just("gwei"),
        just("days"),
        just("wei"),
    ))
    .ignored();
    let signed_integer_type_parser = just("int")
        .ignore_then(choice::<_, Simple<char>>((
            choice::<_, Simple<char>>((
                just("104"),
                just("112"),
                just("120"),
                just("128"),
                just("136"),
                just("144"),
                just("152"),
                just("160"),
                just("168"),
                just("176"),
                just("184"),
                just("192"),
                just("200"),
                just("208"),
                just("216"),
                just("224"),
            )),
            choice::<_, Simple<char>>((
                just("232"),
                just("240"),
                just("248"),
                just("256"),
                just("16"),
                just("24"),
                just("32"),
                just("40"),
                just("48"),
                just("56"),
                just("64"),
                just("72"),
                just("80"),
                just("88"),
                just("96"),
                just("8"),
            )),
        )))
        .ignored();
    let whitespace_parser = choice::<_, Simple<char>>((
        just(' ').ignored(),
        just('\t').ignored(),
        just('\r').ignored(),
        just('\n').ignored(),
    ))
    .ignored();
    let yul_decimal_number_literal_parser = choice::<_, Simple<char>>((
        just('0').ignored(),
        filter(|&c: &char| ('1' <= c && c <= '9'))
            .then(filter(|&c: &char| c.is_ascii_digit()).repeated())
            .ignored(),
    ))
    .ignored();
    let yul_hex_literal_parser = just("0x")
        .ignore_then(choice::<_, Simple<char>>((
            filter(|&c: &char| c.is_ascii_digit()).ignored(),
            filter(|&c: &char| ('a' <= c && c <= 'f')).ignored(),
            filter(|&c: &char| ('A' <= c && c <= 'F')).ignored(),
        )))
        .then(
            choice::<_, Simple<char>>((
                filter(|&c: &char| c.is_ascii_digit()).ignored(),
                filter(|&c: &char| ('a' <= c && c <= 'f')).ignored(),
                filter(|&c: &char| ('A' <= c && c <= 'F')).ignored(),
            ))
            .repeated(),
        )
        .ignored();
    let pragma_directive_parser = just("pragma")
        .ignore_then(filter(|&c: &char| c != ';'))
        .then(filter(|&c: &char| c != ';').repeated())
        .then_ignore(just(';'))
        .ignored();
    let decimal_exponent_parser =
        choice::<_, Simple<char>>((just('e').ignored(), just('E').ignored()))
            .then(just('-').or_not())
            .then(decimal_integer_parser.clone())
            .ignored();
    let decimal_float_parser = decimal_integer_parser
        .clone()
        .or_not()
        .then_ignore(just('.'))
        .then(decimal_integer_parser.clone())
        .ignored();
    let hex_byte_escape_parser = just('x')
        .ignore_then(
            hex_character_parser
                .clone()
                .repeated()
                .at_least(2usize)
                .at_most(2usize),
        )
        .ignored();
    let hex_number_parser = just('0')
        .ignore_then(just('x'))
        .ignore_then(
            hex_character_parser
                .clone()
                .separated_by(just('_').or_not())
                .at_least(1usize),
        )
        .ignored();
    let ignore_parser = choice::<_, Simple<char>>((
        whitespace_parser.clone().ignored(),
        comment_parser.clone().ignored(),
        line_comment_parser.clone().ignored(),
    ))
    .repeated()
    .ignored();
    let identifier_part_parser = choice::<_, Simple<char>>((
        identifier_start_parser.clone().ignored(),
        filter(|&c: &char| c.is_ascii_digit()).ignored(),
    ))
    .ignored();
    let possibly_separated_pairs_of_hex_digits_parser = hex_character_parser
        .clone()
        .repeated()
        .at_least(2usize)
        .at_most(2usize)
        .separated_by(just('_').or_not())
        .at_least(1usize)
        .ignored();
    let ufixed_parser = just('u').ignore_then(fixed_parser.clone()).ignored();
    let unicode_escape_parser = just('u')
        .ignore_then(
            hex_character_parser
                .clone()
                .repeated()
                .at_least(4usize)
                .at_most(4usize),
        )
        .ignored();
    let unsigned_integer_type_parser = just('u')
        .ignore_then(signed_integer_type_parser.clone())
        .ignored();
    let decimal_number_parser = choice::<_, Simple<char>>((
        decimal_integer_parser.clone().ignored(),
        decimal_float_parser.clone().ignored(),
    ))
    .then(decimal_exponent_parser.clone().or_not())
    .ignored();
    let escape_sequence_parser = just('\\')
        .ignore_then(choice::<_, Simple<char>>((
            ascii_escape_parser.clone().ignored(),
            hex_byte_escape_parser.clone().ignored(),
            unicode_escape_parser.clone().ignored(),
        )))
        .ignored();
    let hex_string_literal_parser = just("hex")
        .ignore_then(choice::<_, Simple<char>>((
            just('"')
                .ignore_then(
                    possibly_separated_pairs_of_hex_digits_parser
                        .clone()
                        .or_not(),
                )
                .then_ignore(just('"'))
                .ignored(),
            just('\'')
                .ignore_then(
                    possibly_separated_pairs_of_hex_digits_parser
                        .clone()
                        .or_not(),
                )
                .then_ignore(just('\''))
                .ignored(),
        )))
        .ignored();
    let raw_identifier_parser = identifier_start_parser
        .clone()
        .then(identifier_part_parser.clone().repeated())
        .ignored();
    let add_sub_operator_parser = choice::<_, Simple<char>>((
        just('+').then_ignore(ignore_parser.clone()).ignored(),
        just('-').then_ignore(ignore_parser.clone()).ignored(),
    ))
    .ignored()
    .boxed();
    let assignment_operator_parser = choice::<_, Simple<char>>((
        just(">>>="),
        just("<<="),
        just(">>="),
        just("|="),
        just("^="),
        just("&="),
        just("+="),
        just("-="),
        just("*="),
        just("/="),
        just("%="),
        just("="),
    ))
    .ignored()
    .boxed();
    let break_statement_parser = just("break")
        .then_ignore(ignore_parser.clone())
        .ignore_then(just(';').then_ignore(ignore_parser.clone()))
        .ignored()
        .boxed();
    let continue_statement_parser = just("continue")
        .then_ignore(ignore_parser.clone())
        .ignore_then(just(';').then_ignore(ignore_parser.clone()))
        .ignored()
        .boxed();
    let data_location_parser =
        choice::<_, Simple<char>>((just("calldata"), just("storage"), just("memory")))
            .ignored()
            .boxed();
    let elementary_type_parser = choice::<_, Simple<char>>((
        just("bool").then_ignore(ignore_parser.clone()).ignored(),
        just("string").then_ignore(ignore_parser.clone()).ignored(),
        just("bytes").then_ignore(ignore_parser.clone()).ignored(),
        signed_integer_type_parser
            .clone()
            .then_ignore(ignore_parser.clone())
            .ignored(),
        unsigned_integer_type_parser
            .clone()
            .then_ignore(ignore_parser.clone())
            .ignored(),
        fixed_bytes_parser
            .clone()
            .then_ignore(ignore_parser.clone())
            .ignored(),
        fixed_parser
            .clone()
            .then_ignore(ignore_parser.clone())
            .ignored(),
        ufixed_parser
            .clone()
            .then_ignore(ignore_parser.clone())
            .ignored(),
    ))
    .ignored()
    .boxed();
    let equality_comparison_operator_parser = choice::<_, Simple<char>>((just("=="), just("!=")))
        .ignored()
        .boxed();
    let keyword_parser = choice::<_, Simple<char>>((
        choice::<_, Simple<char>>((
            just("pragma").then_ignore(ignore_parser.clone()).ignored(),
            just("abstract")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("anonymous")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("address").then_ignore(ignore_parser.clone()).ignored(),
            just("as").then_ignore(ignore_parser.clone()).ignored(),
            just("assembly")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("bool").then_ignore(ignore_parser.clone()).ignored(),
            just("break").then_ignore(ignore_parser.clone()).ignored(),
            just("bytes").then_ignore(ignore_parser.clone()).ignored(),
            just("calldata")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("catch").then_ignore(ignore_parser.clone()).ignored(),
            just("constant")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("constructor")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("continue")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("contract")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("delete").then_ignore(ignore_parser.clone()).ignored(),
        )),
        choice::<_, Simple<char>>((
            just("do").then_ignore(ignore_parser.clone()).ignored(),
            just("else").then_ignore(ignore_parser.clone()).ignored(),
            just("emit").then_ignore(ignore_parser.clone()).ignored(),
            just("enum").then_ignore(ignore_parser.clone()).ignored(),
            just("event").then_ignore(ignore_parser.clone()).ignored(),
            just("external")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("fallback")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("false").then_ignore(ignore_parser.clone()).ignored(),
            just("for").then_ignore(ignore_parser.clone()).ignored(),
            just("function")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("hex").then_ignore(ignore_parser.clone()).ignored(),
            just("if").then_ignore(ignore_parser.clone()).ignored(),
            just("immutable")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("import").then_ignore(ignore_parser.clone()).ignored(),
            just("indexed").then_ignore(ignore_parser.clone()).ignored(),
            just("interface")
                .then_ignore(ignore_parser.clone())
                .ignored(),
        )),
        choice::<_, Simple<char>>((
            just("internal")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("is").then_ignore(ignore_parser.clone()).ignored(),
            just("library").then_ignore(ignore_parser.clone()).ignored(),
            just("mapping").then_ignore(ignore_parser.clone()).ignored(),
            just("memory").then_ignore(ignore_parser.clone()).ignored(),
            just("modifier")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("new").then_ignore(ignore_parser.clone()).ignored(),
            just("override")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("payable").then_ignore(ignore_parser.clone()).ignored(),
            just("private").then_ignore(ignore_parser.clone()).ignored(),
            just("public").then_ignore(ignore_parser.clone()).ignored(),
            just("pure").then_ignore(ignore_parser.clone()).ignored(),
            just("receive").then_ignore(ignore_parser.clone()).ignored(),
            just("return").then_ignore(ignore_parser.clone()).ignored(),
            just("returns").then_ignore(ignore_parser.clone()).ignored(),
            just("storage").then_ignore(ignore_parser.clone()).ignored(),
        )),
        choice::<_, Simple<char>>((
            just("string").then_ignore(ignore_parser.clone()).ignored(),
            just("struct").then_ignore(ignore_parser.clone()).ignored(),
            just("true").then_ignore(ignore_parser.clone()).ignored(),
            just("try").then_ignore(ignore_parser.clone()).ignored(),
            just("type").then_ignore(ignore_parser.clone()).ignored(),
            just("unchecked")
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("using").then_ignore(ignore_parser.clone()).ignored(),
            just("view").then_ignore(ignore_parser.clone()).ignored(),
            just("virtual").then_ignore(ignore_parser.clone()).ignored(),
            just("while").then_ignore(ignore_parser.clone()).ignored(),
            signed_integer_type_parser
                .clone()
                .then_ignore(ignore_parser.clone())
                .ignored(),
            unsigned_integer_type_parser
                .clone()
                .then_ignore(ignore_parser.clone())
                .ignored(),
            fixed_bytes_parser
                .clone()
                .then_ignore(ignore_parser.clone())
                .ignored(),
            just("fixed").then_ignore(ignore_parser.clone()).ignored(),
            just("ufixed").then_ignore(ignore_parser.clone()).ignored(),
        )),
    ))
    .ignored()
    .boxed();
    let mul_div_mod_operator_parser = choice::<_, Simple<char>>((
        just('*').then_ignore(ignore_parser.clone()).ignored(),
        just('/').then_ignore(ignore_parser.clone()).ignored(),
        just('%').then_ignore(ignore_parser.clone()).ignored(),
    ))
    .ignored()
    .boxed();
    let order_comparison_operator_parser =
        choice::<_, Simple<char>>((just("<="), just(">="), just("<"), just(">")))
            .ignored()
            .boxed();
    let positional_argument_list_parser = expression_parser
